# serializer version: 1
# name: test_all_entities[sensor.kiosker_a98be1ce-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_text',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutText',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Hello world',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_icon',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutIcon',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'star.fill',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_background',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutBackground',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '#B10A10',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_foreground',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutForeground',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '#f0fA12',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_button_background',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutButtonBackground',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '#c21c1c',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_button_foreground',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutButtonForeground',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '#36E20B',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_button_text',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutButtonText',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dismiss me',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_sound',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutSound',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1007',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_ambient_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_ambient_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient light',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ambient light',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_light',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_ambientLight',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_ambient_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kiosker A98BE1CE Ambient light',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_ambient_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.6',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_batteryLevel',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Kiosker A98BE1CE Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '85',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_duration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Duration',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Duration',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blackout_expire',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_blackoutExpire',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Kiosker A98BE1CE Duration',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_last_interaction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_last_interaction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last interaction',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last interaction',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_interaction',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_lastInteraction',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_last_interaction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Kiosker A98BE1CE Last interaction',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_last_interaction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-01-01T12:00:00+00:00',
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_last_motion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kiosker_a98be1ce_last_motion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last motion',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last motion',
    'platform': 'kiosker',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_motion',
    'unique_id': 'A98BE1CE-5FE7-4A8D-B2C3-123456789ABC_lastMotion',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.kiosker_a98be1ce_last_motion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Kiosker A98BE1CE Last motion',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kiosker_a98be1ce_last_motion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-01-01T11:55:00+00:00',
  })
# ---
